--- a/backoffice.html
+++ b/backoffice.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <h2 class="mt-5 mb-3">Edit product</h2>
+          <h2 class="mt-5 mb-3">Add product</h2>
           <form onsubmit="handleSubmit(event)">
             <div class="form-group">
               <label for="name">Product name</label>
@@ -89,7 +89,7 @@
                 role="status"
                 aria-hidden="true"
               ></span>
-              Edit
+              Add
             </button>
             <button
               type="button"
