--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     >
       <span class="sr-only">Loading...</span>
     </div>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row"></div>
     </div>
 
