--- a/details.html
+++ b/details.html
@@ -29,7 +29,7 @@
         It uses utility classes for typography and spacing to space content out
         within the larger container.
       </p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary btn-lg" href="index.html" role="button">Back</a>
     </div>
   </body>
 </html>
